# trieste-while

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  profile-with-perf  program_generation  stats
examples/: arith.while  bexpr-constant-prop.while  complex_condition.while  dead_code.while  dead_loop.while  double_output.while  factorial-iterative.while  factorial.while  factorial_imp.while  function.while  inlining.while  inlining2.while  io.while  large_interprocedural_program.while  negation.while  nested_if.while  nested_if_loop.while  nested_loop.while  nested_while.while  non_inlining.while  parens.while  power.while  presentation-program.while  simple-arith.while  test.while  vars.while  z_analysis_complexer.while  z_analysis_if_stmt.while  z_analysis_while.while
examples/failing/: bad_function.while  empty_braces.while  empty_parens.while  no_return.while
src/: call_graph.hh  compiler.cc  control_flow.cc  control_flow.hh  inlining_rewriter.cc  internal.hh  interpreter.cc  lang.hh  lib.cc  main.cc  optimization_analysis.cc  parser.cc  reader.cc  utils.cc  utils.hh  while.cc  while_trieste.cc
src/analyses/: constant_propagation.hh  dataflow_analysis.hh  liveness.hh  zero.hh
src/passes/: addsub.cc  assignments.cc  atoms.cc  blockify.cc  build_call_graph.cc  check_refs.cc  comparisons.cc  compile.cc  conditionals.cc  constant_folding.cc  dead_code_elimination.cc  eval.cc  expressions.cc  functions.cc  gather_control_flow.cc  gather_stats.cc  gather_vars.cc  generate_mermaid.cc  grouping.cc  inlining.cc  loops.cc  multiplication.cc  normalization.cc  statements.cc  to3addr.cc  unique_variables.cc  zero_analysis.cc
